[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/GUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://main.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/beep.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/cmpl_row.mp3" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/drop.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/music.mp3" type="AudioStream" id=6]

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="GUI" parent="." instance=ExtResource( 1 )]

[node name="Sounds" type="Node" parent="."]

[node name="MainTheme" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 6 )
volume_db = -10.0

[node name="Beep" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 3 )
volume_db = -8.0
pitch_scale = 1.3

[node name="CompletedRow" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 4 )
volume_db = -4.0
pitch_scale = 0.9

[node name="Drop" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 5 )
volume_db = -30.0

[connection signal="new_game" from="GUI" to="." method="_on_GUI_new_game"]
